[project]
name = "toy-view-counter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "svgwrite>=1.4.3",
    "uuid7>=0.1.0",
    "uvicorn>=0.34.2",
]
